--- a/css/landing-page.css
+++ b/css/landing-page.css
@@ -172,3 +172,9 @@ p.copyright {
 .round {
   border-radius: 24px;
 }
+
+.btn-outline {
+    background-color: transparent;
+    color: inherit;
+    transition: all .5s;
+}
